Clean repository setup: Remove package-lock.json and improve .gitignore
Clean repository improvements:
🧹 Remove package-lock.json from version control
📝 Update .gitignore to exclude all lock files
📚 Enhanced README with proper installation instructions
✨ Clean repository structure for open source sharing

Benefits:
- No more lock file conflicts between different systems
- Users generate their own package-lock.json on install
- Cleaner git history without dependency integrity hashes
- Better cross-platform compatibility

Testing verified:
✅ Fresh npm install works correctly
✅ Build successful: TypeScript compilation + Vite build
✅ Linting passes with zero errors
✅ All game features remain functional

Ready for clean GitHub deployment! 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,22 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Lock files - let users generate their own
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Build outputs
 dist
 dist-ssr
 *.local
+
+# Archives
+*.tar.gz
+*.zip
 
 # Editor directories and files
 .vscode/*
