--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@react-three/rapier": "^2.1.0",
     "@types/three": "^0.180.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "simplex-noise": "^4.0.3",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
